# ob_agents

./: README.md  pyproject.toml  report.md
src/ob_agents/: crew.py  main.py
src/ob_agents/config/: agents.yaml  tasks.yaml
