[project]
name = "ob_agents"
version = "0.1.0"
description = "ob_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.2.1",
]

[project.scripts]
ob_agents = "ob_agents.main:run"
run_crew = "ob_agents.main:run"
train = "ob_agents.main:train"
replay = "ob_agents.main:replay"
test = "ob_agents.main:test"
run_with_trigger = "ob_agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
